--- a/quest.yml
+++ b/quest.yml
@@ -40,8 +40,7 @@ resources:
   - name: github
   - name: codespaces
 frameworks:
-  backend:
-    - node
+  backend: null
 learningMaterials:
   - type: article
     title: TypeORM Migrations
