Enhance user prompts with instructions and update 'birthday' field references in migration steps

--- a/steps/01_run_application.yml
+++ b/steps/01_run_application.yml
@@ -11,8 +11,8 @@ startFlow:
         person: lucca
         messages:
           - text: Hey there! Before we dive into the data migration, let's make sure
-              everything is running smoothly. Please follow the instructions in
-              the README file to start the application. This will ensure we're
+              everything is running smoothly. :instruction[Please follow the instructions in
+              the README file to start the application]. This will ensure we're
               starting from a stable base.
     - actionId: ready_message
       params:
