--- a/steps/06_update_frontend copy.yml
+++ b/steps/06_update_frontend copy.yml
@@ -18,3 +18,6 @@ trigger:
   flowNode:
     do:
       - actionId: github_pr_review
+        params:
+          messages:
+            person: lucca
