Rename frontend update step file and add instruction for API endpoint updates to include 'birthday' field

--- a/steps/06_update_frontend.yml
+++ b/steps/06_update_frontend.yml
@@ -10,6 +10,7 @@ startFlow:
         person: lucca
         messages:
           - text: Finally, let's update the frontend to include the new 'birthday' field.
+              You'll need to update the API endpoints to expose this field to the frontend.
               Make sure the user profile page reflects this change, and open a pull
               request with your updates.
 
